@@ -221,15 +221,6 @@ nfreeRegsType (int type)
 }
 
 /*-----------------------------------------------------------------*/
-/* useReg - marks a register  as used                              */
-/*-----------------------------------------------------------------*/
-static void
-useReg (regs * reg)
-{
-  reg->isFree = 0;
-}
-
-/*-----------------------------------------------------------------*/
 /* computeSpillable - given a point find the spillable live ranges */
 /*-----------------------------------------------------------------*/
 static bitVect *
@@ -284,15 +275,6 @@ rematable (symbol * sym, eBBlock * ebp, iCode * ic)
   return sym->remat;
 }
 
-/*-----------------------------------------------------------------*/
-/* allLRs - return true for all                                    */
-/*-----------------------------------------------------------------*/
-static int
-allLRs (symbol * sym, eBBlock * ebp, iCode * ic)
-{
-  return 1;
-}
-
 /** liveRangesWith - applies function to a given set of live range
  */
 static set *
@@ -327,7 +309,6 @@ liveRangesWith (bitVect * lrs, int (func) (symbol *, eBBlock *, iCode *),
 
   return rset;
 }
-
 
 /** leastUsedLR - given a set determines which is the least used
  */
@@ -523,54 +504,6 @@ spillThis (symbol * sym)
     }
   return;
 }
-
-#if DISABLED
-/*-----------------------------------------------------------------*/
-/* allDefsOutOfRange - all definitions are out of a range          */
-/*-----------------------------------------------------------------*/
-static bool
-allDefsOutOfRange (bitVect * defs, int fseq, int toseq)
-{
-  int i;
-
-  if (!defs)
-    return TRUE;
-
-  for (i = 0; i < defs->size; i++)
-    {
-      iCode *ic;
-
-      if (bitVectBitValue (defs, i) &&
-          (ic = hTabItemWithKey (iCodehTab, i)) &&
-          (ic->seq >= fseq && ic->seq <= toseq))
-
-        return FALSE;
-
-    }
-
-  return TRUE;
-}
-
-/*-----------------------------------------------------------------*/
-/* hasSpilLocnoUptr - will return 1 if the symbol has spil location */
-/*                    but is not used as a pointer                 */
-/*-----------------------------------------------------------------*/
-static int
-hasSpilLocnoUptr (symbol * sym, eBBlock * ebp, iCode * ic)
-{
-  return ((sym->usl.spillLoc && !sym->uptr) ? 1 : 0);
-}
-
-/*-----------------------------------------------------------------*/
-/* notUsedInRemaining - not used or defined in remain of the block */
-/*-----------------------------------------------------------------*/
-static int
-notUsedInRemaining (symbol * sym, eBBlock * ebp, iCode * ic)
-{
-  return ((usedInRemaining (operandFromSymbol (sym), ic) ? 0 : 1) &&
-          allDefsOutOfRange (sym->defs, ebp->fSeq, ebp->lSeq));
-}
-#endif
 
 /** Select a iTemp to spil : rather a simple procedure.
  */
@@ -793,22 +726,6 @@ tryAgain:
   goto tryAgain;
 }
 
-static regs *getRegGprNoSpil()
-{
-  regs *reg;
-
-  /* try for gpr type */
-  if ((reg = allocReg (REG_GPR)))
-    {
-      D (D_ALLOC, ("getRegGprNoSpil: got a reg.\n"));
-      return reg;
-    }
-  assert(0);
-
-  /* just to make the compiler happy */
-  return 0;
-}
-
 /** Symbol has a given register.
  */
 static bool
@@ -975,48 +892,6 @@ willCauseSpill (int nr, int rt)
   return 1;
 }
 
-/** The allocator can allocate same registers to result and operand,
-    if this happens make sure they are in the same position as the operand
-    otherwise chaos results.
-*/
-static int
-positionRegs (symbol * result, symbol * opsym)
-{
-  int count = min (result->nRegs, opsym->nRegs);
-  int i, j = 0, shared = 0;
-  int change = 0;
-
-  D (D_ALLOC, ("positionRegs: on result %p opsum %p line %u\n", result, opsym, lineno));
-
-  /* if the result has been spilt then cannot share */
-  if (opsym->isspilt)
-    return 0;
-again:
-  shared = 0;
-  /* first make sure that they actually share */
-  for (i = 0; i < count; i++)
-    {
-      for (j = 0; j < count; j++)
-        {
-          if (result->regs[i] == opsym->regs[j] && i != j)
-            {
-              shared = 1;
-              goto xchgPositions;
-            }
-        }
-    }
-xchgPositions:
-  if (shared)
-    {
-      regs *tmp = result->regs[i];
-      result->regs[i] = result->regs[j];
-      result->regs[j] = tmp;
-      change ++;
-      goto again;
-    }
-  return change ;
-}
-
 /** Try to allocate a pair of registers to the symbol.
  */
 bool
@@ -1071,336 +946,6 @@ verifyRegsAssigned (operand *op, iCode * ic)
   werrorfl (ic->filename, ic->lineno, W_LOCAL_NOINIT,
             sym->prereqv ? sym->prereqv->name : sym->name);
   spillThis (sym);
-}
-
-
-/** Serially allocate registers to the variables.
-    This is the main register allocation function.  It is called after
-    packing.
- */
-static void
-serialRegAssign (eBBlock ** ebbs, int count)
-{
-  int i;
-
-  /* for all blocks */
-  for (i = 0; i < count; i++)
-    {
-      iCode *ic;
-
-      if (ebbs[i]->noPath &&
-          (ebbs[i]->entryLabel != entryLabel &&
-           ebbs[i]->entryLabel != returnLabel))
-        continue;
-
-      /* for all instructions do */
-      for (ic = ebbs[i]->sch; ic; ic = ic->next)
-        {
-          /* if this is an ipop that means some live
-             range will have to be assigned again */
-          if (ic->op == IPOP)
-            {
-              wassert (0);
-              reassignLR (IC_LEFT (ic));
-            }
-
-          /* if result is present && is a true symbol */
-          if (IC_RESULT (ic) && ic->op != IFX &&
-              IS_TRUE_SYMOP (IC_RESULT (ic)))
-            {
-              OP_SYMBOL (IC_RESULT (ic))->allocreq++;
-            }
-
-          /* take away registers from live
-             ranges that end at this instruction */
-          deassignLRs (ic, ebbs[i]);
-
-          /* some don't need registers */
-          if (SKIP_IC2 (ic) ||
-              ic->op == JUMPTABLE ||
-              ic->op == IFX ||
-              ic->op == IPUSH ||
-              ic->op == IPOP ||
-              (IC_RESULT (ic) && POINTER_SET (ic)))
-            {
-              continue;
-            }
-
-          /* now we need to allocate registers only for the result */
-          if (IC_RESULT (ic))
-            {
-              symbol *sym = OP_SYMBOL (IC_RESULT (ic));
-              bitVect *spillable;
-              int willCS;
-              int j;
-
-              D (D_ALLOC, ("serialRegAssign: in loop on result %p\n", sym));
-
-              /* Make sure any spill location is definately allocated */
-              if (sym->isspilt && !sym->remat && sym->usl.spillLoc &&
-                  !sym->usl.spillLoc->allocreq)
-                {
-                  sym->usl.spillLoc->allocreq++;
-                }
-
-              /* if it does not need or is spilt
-                 or is already assigned to registers
-                 or will not live beyond this instructions */
-              if (!sym->nRegs ||
-                  sym->isspilt ||
-                  bitVectBitValue (_G.regAssigned, sym->key) ||
-                  sym->liveTo <= ic->seq)
-                {
-                  D (D_ALLOC, ("serialRegAssign: won't live long enough.\n"));
-                  continue;
-                }
-
-              /* if some liverange has been spilt at the block level
-                 and this one live beyond this block then spil this
-                 to be safe */
-              if (_G.blockSpil && sym->liveTo > ebbs[i]->lSeq)
-                {
-                  D (D_ALLOC, ("serialRegAssign: \"spilling to be safe.\"\n"));
-                  spillThis (sym);
-                  continue;
-                }
-              /* if trying to allocate this will cause
-                 a spill and there is nothing to spill
-                 or this one is rematerializable then
-                 spill this one */
-              willCS = willCauseSpill (sym->nRegs, sym->regType);
-              spillable = computeSpillable (ic);
-              if (sym->remat ||
-                  (willCS && bitVectIsZero (spillable)))
-                {
-
-                  D (D_ALLOC, ("serialRegAssign: \"remat spill\"\n"));
-                  spillThis (sym);
-                  continue;
-
-                }
-
-              /* If the live range preceeds the point of definition
-                 then ideally we must take into account registers that
-                 have been allocated after sym->liveFrom but freed
-                 before ic->seq. This is complicated, so spill this
-                 symbol instead and let fillGaps handle the allocation. */
-              if (sym->liveFrom < ic->seq)
-                {
-                    spillThis (sym);
-                    continue;
-                }
-
-              /* if it has a spillocation & is used less than
-                 all other live ranges then spill this */
-              if (willCS) {
-                      if (sym->usl.spillLoc) {
-                              symbol *leastUsed = leastUsedLR (liveRangesWith (spillable,
-                                                                               allLRs, ebbs[i], ic));
-                              if (leastUsed && leastUsed->used > sym->used) {
-                                      spillThis (sym);
-                                      continue;
-                              }
-                      } else {
-                              /* if none of the liveRanges have a spillLocation then better
-                                 to spill this one than anything else already assigned to registers */
-                              if (liveRangesWith(spillable,noSpilLoc,ebbs[i],ic)) {
-                                  /* if this is local to this block then we might find a block spil */
-                                  if (!(sym->liveFrom >= ebbs[i]->fSeq && sym->liveTo <= ebbs[i]->lSeq)) {
-                                      spillThis (sym);
-                                      continue;
-                                  }
-                              }
-                      }
-              }
-
-              /* else we assign registers to it */
-              _G.regAssigned = bitVectSetBit (_G.regAssigned, sym->key);
-              _G.totRegAssigned = bitVectSetBit (_G.totRegAssigned, sym->key);
-
-              /* Special case:  Try to fit into a reg pair if
-                 available */
-              D (D_ALLOC, ("serialRegAssign: actually allocing regs!\n"));
-              if ((sym->nRegs == 2) && tryAllocatingRegPair (sym))
-                {
-                }
-              else
-                {
-                  for (j = 0; j < sym->nRegs; j++)
-                    {
-                      sym->regs[j] = getRegGpr (ic, ebbs[i], sym);
-
-                      /* if the allocation falied which means
-                         this was spilt then break */
-                      if (!sym->regs[j])
-                        {
-                          D (D_ALLOC, ("Couldnt alloc (spill)\n"))
-                            break;
-                        }
-                    }
-                  /* Make sure we didn't allocate a register pair with bytes swapped */
-                  if(sym->nRegs == 2 && sym->regs[0] == sym->regs[1] + 1 && sym->regs[0] != &regsZ80[2])
-                  {
-			freeReg(sym->regs[0]);
-			freeReg(sym->regs[1]);
-			if(!tryAllocatingRegPair(sym))
-				wassertl(0, "Failed to swap register pair bytes back.");
-                  }
-                }
-              /* if it shares registers with operands make sure
-                 that they are in the same position */
-              if (IC_LEFT (ic) && IS_SYMOP (IC_LEFT (ic)) &&
-                  OP_SYMBOL (IC_LEFT (ic))->nRegs && ic->op != '=')
-                positionRegs (OP_SYMBOL (IC_RESULT (ic)),
-                              OP_SYMBOL (IC_LEFT (ic)));
-              /* do the same for the right operand */
-              if (IC_RIGHT (ic) && IS_SYMOP (IC_RIGHT (ic)) &&
-                  OP_SYMBOL (IC_RIGHT (ic))->nRegs)
-                positionRegs (OP_SYMBOL (IC_RESULT (ic)),
-                              OP_SYMBOL (IC_RIGHT (ic)));
-
-            }
-        }
-    }
-
-    /* Check for and fix any problems with uninitialized operands */
-    for (i = 0; i < count; i++)
-      {
-        iCode *ic;
-
-        if (ebbs[i]->noPath &&
-            (ebbs[i]->entryLabel != entryLabel &&
-             ebbs[i]->entryLabel != returnLabel))
-            continue;
-
-        for (ic = ebbs[i]->sch; ic; ic = ic->next)
-          {
-            if (SKIP_IC2 (ic))
-              continue;
-
-            if (ic->op == IFX)
-              {
-                verifyRegsAssigned (IC_COND (ic), ic);
-                continue;
-              }
-
-            if (ic->op == JUMPTABLE)
-              {
-                verifyRegsAssigned (IC_JTCOND (ic), ic);
-                continue;
-              }
-
-            verifyRegsAssigned (IC_RESULT (ic), ic);
-            verifyRegsAssigned (IC_LEFT (ic), ic);
-            verifyRegsAssigned (IC_RIGHT (ic), ic);
-          }
-      }
-
-}
-
-/*-----------------------------------------------------------------*/
-/* fillGaps - Try to fill in the Gaps left by Pass1                */
-/*-----------------------------------------------------------------*/
-static void fillGaps()
-{
-    symbol *sym =NULL;
-    int key =0;
-
-    if (getenv("DISABLE_FILL_GAPS")) return;
-
-    /* look for livernages that was spilt by the allocator */
-    for (sym = hTabFirstItem(liveRanges,&key) ; sym ;
-         sym = hTabNextItem(liveRanges,&key)) {
-
-        int i;
-        int pdone = 0;
-
-        if (!sym->spillA || !sym->clashes || sym->remat) continue ;
-
-        /* find the liveRanges this one clashes with, that are
-           still assigned to registers & mark the registers as used*/
-        for ( i = 0 ; i < sym->clashes->size ; i ++) {
-            int k;
-            symbol *clr;
-
-            if (bitVectBitValue(sym->clashes,i) == 0 ||    /* those that clash with this */
-                bitVectBitValue(_G.totRegAssigned,i) == 0) /* and are still assigned to registers */
-                continue ;
-
-            clr = hTabItemWithKey(liveRanges,i);
-            assert(clr);
-
-            /* mark these registers as used */
-            for (k = 0 ; k < clr->nRegs ; k++ )
-                useReg(clr->regs[k]);
-        }
-
-        if (willCauseSpill(sym->nRegs,sym->regType)) {
-            /* NOPE :( clear all registers & and continue */
-            freeAllRegs();
-            continue ;
-        }
-
-        /* THERE IS HOPE !!!! */
-        for (i=0; i < sym->nRegs ; i++ ) {
-                sym->regs[i] = getRegGprNoSpil ();
-        }
-
-        /* for all its definitions check if the registers
-           allocated needs positioning NOTE: we can position
-           only ONCE if more than One positioning required
-           then give up */
-        sym->isspilt = 0;
-        for (i = 0 ; i < sym->defs->size ; i++ ) {
-            if (bitVectBitValue(sym->defs,i)) {
-                iCode *ic;
-                if (!(ic = hTabItemWithKey(iCodehTab,i))) continue ;
-                if (SKIP_IC(ic)) continue;
-                assert(isSymbolEqual(sym,OP_SYMBOL(IC_RESULT(ic)))); /* just making sure */
-                /* if left is assigned to registers */
-                if (IS_SYMOP(IC_LEFT(ic)) &&
-                    bitVectBitValue(_G.totRegAssigned,OP_SYMBOL(IC_LEFT(ic))->key)) {
-                    pdone += positionRegs(sym,OP_SYMBOL(IC_LEFT(ic)));
-                }
-                if (IS_SYMOP(IC_RIGHT(ic)) &&
-                    bitVectBitValue(_G.totRegAssigned,OP_SYMBOL(IC_RIGHT(ic))->key)) {
-                    pdone += positionRegs(sym,OP_SYMBOL(IC_RIGHT(ic)));
-                }
-                if (pdone > 1) break;
-            }
-        }
-        for (i = 0 ; i < sym->uses->size ; i++ ) {
-            if (bitVectBitValue(sym->uses,i)) {
-                iCode *ic;
-                if (!(ic = hTabItemWithKey(iCodehTab,i))) continue ;
-                if (SKIP_IC(ic)) continue;
-                if (!IS_ASSIGN_ICODE(ic)) continue ;
-
-                /* if result is assigned to registers */
-                if (IS_SYMOP(IC_RESULT(ic)) &&
-                    bitVectBitValue(_G.totRegAssigned,OP_SYMBOL(IC_RESULT(ic))->key)) {
-                    pdone += positionRegs(sym,OP_SYMBOL(IC_RESULT(ic)));
-                }
-                if (pdone > 1) break;
-            }
-        }
-        /* had to position more than once GIVE UP */
-        if (pdone > 1) {
-            /* UNDO all the changes we made to try this */
-            sym->isspilt = 1;
-            for (i=0; i < sym->nRegs ; i++ ) {
-                sym->regs[i] = NULL;
-            }
-            freeAllRegs();
-            D(D_FILL_GAPS,("Fill Gap gave up due to positioning for %s in function %s\n",sym->name, currFunc ? currFunc->name : "UNKNOWN"));
-            continue ;
-        }
-        D(D_FILL_GAPS,("FILLED GAP for %s in function %s\n",sym->name, currFunc ? currFunc->name : "UNKNOWN"));
-        _G.totRegAssigned = bitVectSetBit(_G.totRegAssigned,sym->key);
-        sym->isspilt = sym->spillA = 0 ;
-        sym->usl.spillLoc->allocreq--;
-        freeAllRegs();
-    }
 }
 
 /*-----------------------------------------------------------------*/
@@ -3181,104 +2726,6 @@ joinPushes (iCode *lic)
     }
 
   return lic;
-}
-
-/*-----------------------------------------------------------------*/
-/* Old register allocator                                          */
-/*-----------------------------------------------------------------*/
-void
-z80_ralloc (ebbIndex * ebbi)
-{
-  eBBlock ** ebbs = ebbi->bbOrder;
-  int count = ebbi->count;
-  iCode *ic;
-  int i;
-
-  D (D_ALLOC, ("\n-> z80_assignRegisters: entered.\n"));
-
-  setToNull ((void *) &_G.funcrUsed);
-  setToNull ((void *) &_G.totRegAssigned);
-  _G.stackExtend = _G.dataExtend = 0;
-
-  if (IS_GB)
-    {
-      /* DE is required for the code gen. */
-      _G.nRegs = GBZ80_MAX_REGS;
-      regsZ80 = _gbz80_regs;
-    }
-  else
-    {
-      _G.nRegs = Z80_MAX_REGS;
-      regsZ80 = _z80_regs;
-    }
-
-  /* change assignments this will remove some
-     live ranges reducing some register pressure */
-  for (i = 0; i < count; i++)
-    packRegisters (ebbs[i]);
-
-  /* liveranges probably changed by register packing
-     so we compute them again */
-  recomputeLiveRanges (ebbs, count);
-
-  if (options.dump_pack)
-    dumpEbbsToFileExt (DUMP_PACK, ebbi);
-
-  /* first determine for each live range the number of
-     registers & the type of registers required for each */
-  regTypeNum ();
-
-  /* and serially allocate registers */
-  serialRegAssign (ebbs, count);
-
-  freeAllRegs ();
-  fillGaps();
-
-  /* if stack was extended then tell the user */
-  if (_G.stackExtend)
-    {
-/*      werror(W_TOOMANY_SPILS,"stack", */
-/*             _G.stackExtend,currFunc->name,""); */
-      _G.stackExtend = 0;
-    }
-
-  if (_G.dataExtend)
-    {
-/*      werror(W_TOOMANY_SPILS,"data space", */
-/*             _G.dataExtend,currFunc->name,""); */
-      _G.dataExtend = 0;/*-----------------------------------------------------------------*/
-/* Old register allocator                                          */
-/*-----------------------------------------------------------------*/
-    }
-
-  if (options.dump_rassgn) {
-    dumpEbbsToFileExt (DUMP_RASSGN, ebbi);
-    dumpLiveRanges (DUMP_LRANGE, liveRanges);
-  }
-
-  /* after that create the register mask
-     for each of the instruction */
-  createRegMask (ebbs, count);
-
-  /* now get back the chain */
-  ic = iCodeLabelOptimize (iCodeFromeBBlock (ebbs, count));
-
-  ic = joinPushes (ic);
-
-  /* redo that offsets for stacked automatic variables */
-  redoStackOffsets ();
-
-  genZ80Code (ic);
-
-  /* free up any stackSpil locations allocated */
-  applyToSet (_G.stackSpil, deallocStackSpil);
-  _G.slocNum = 0;
-  setToNull ((void *) &_G.stackSpil);
-  setToNull ((void *) &_G.spiltSet);
-  /* mark all registers as free */
-  freeAllRegs ();
-
-  return;
 }
 
 /* C++ parts of new register allocator */
