@@ -1,4 +1,8 @@
 2011-01-14 Philipp Klaus Krause <pkk AT spth.de>
+	* src/z80/ralloc.c:
+	  Remove some no longer used remains of the old register allocator.
+
+2011-01-14 Philipp Klaus Krause <pkk AT spth.de>
 	* src/z80/main.c:
 	  Enable new register allocator options for the GBZ80.
 
